--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "dependencies": {
     "gulp-concat": "^2.6.1",
     "gulp-jasmine-browser": "^4.1.0",
-    "jasmine-core": "^3.5.0",
-    "puppeteer": "^1.20.0",
     "gulp-order": "^1.2.0",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "jasmine-core": "^3.5.0",
+    "puppeteer": "^1.20.0"
   }
 }
