--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
+    "autoprefixer": "^9.6.5",
     "gulp-concat": "^2.6.1",
     "gulp-jasmine-browser": "^4.1.0",
     "gulp-order": "^1.2.0",
