--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "autoprefixer": "^10.0.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-postcss": "^9.0.0",
+    "gulp-uglify": "^3.0.2",
+    "postcss": "^8.1.1"
   },
   "dependencies": {
-    "autoprefixer": "^9.8.6",
     "gulp-concat": "^2.6.1",
     "gulp-jasmine-browser": "^4.1.0",
     "gulp-order": "^1.2.0",
