--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
     "gulp-babel": "^8.0.0",
     "gulp-postcss": "^9.0.0",
     "gulp-uglify": "^3.0.2",
+    "karma": "^5.2.3",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-sourcemap-loader": "^0.3.8",
     "postcss": "^8.1.2"
   },
   "dependencies": {
     "gulp-concat": "^2.6.1",
-    "gulp-jasmine-browser": "^4.1.0",
     "gulp-order": "^1.2.0",
     "gulp-sourcemaps": "^2.6.5",
     "jasmine-core": "^3.6.0",
