--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "autoprefixer": "^10.4.2",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-order": "^1.2.0",
     "gulp-postcss": "^9.0.1",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
+    "jasmine-core": "^4.0.1",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.2.0",
@@ -26,13 +30,7 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-sourcemap-loader": "^0.3.8",
-    "postcss": "^8.4.6"
-  },
-  "dependencies": {
-    "gulp-concat": "^2.6.1",
-    "gulp-order": "^1.2.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "jasmine-core": "^3.10.1",
-    "puppeteer": "^13.3.2"
+    "postcss": "^8.4.6",
+    "puppeteer": "^13.4.0"
   }
 }
