--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gulp-order": "^1.2.0",
     "gulp-postcss": "^9.0.1",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
+    "gulp-terser": "^2.1.0",
     "jasmine-core": "^4.0.1",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "^3.1.0",
